--- a/css/styles.css
+++ b/css/styles.css
@@ -797,7 +797,7 @@ margin-bottom: 16px;
     margin-right: 120px;
 }
 
-.backdrop{
+.backdrop.is-open{
     position: fixed;
     top: 0;
     left: 0;
@@ -805,12 +805,16 @@ margin-bottom: 16px;
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    background-color:#FCFCFC;
-    /* opacity: 0;
+    /* top: 50%;
+    left: 50%; */
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    background-color: #2E2F42, rgba(46, 47, 66, 0.40);;
+    opacity: 0;
     visibility: hidden;
-    pointer-events: none; */
-    width: 408px;
-    height: 584px;
+    pointer-events: none;  
+ 
 }
 
 .user-name-wrapper{
@@ -829,6 +833,10 @@ margin-bottom: 16px;
         font-weight: 400;
         line-height:1.17;
         letter-spacing: 0.04em;
+        width: 360px;
+        height: 120px;
+        padding-top: 8px;
+        padding-left: 16px;
 }
 
 .backdrop-text{
@@ -849,8 +857,13 @@ margin-bottom: 16px;
 }
 
 .backdrop-box{
+    position: relative;
     padding-left: 24px;
     padding-right: 24px;
+    width: 408px;
+    height: 584px;
+    background-color: #FCFCFC;
+    
     
 }
 
@@ -860,6 +873,9 @@ margin-bottom: 16px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    width: 338px;
+    
+   
 }
 
 .other-style-text{
@@ -883,6 +899,7 @@ margin-bottom: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
         margin-bottom: 24px;
+        width: 105px;
 }
 
 .user-name-wrapper{
@@ -891,4 +908,31 @@ margin-bottom: 16px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    margin-bottom: 4px;
+}
+
+.close-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 32px;
+    margin-right: 32px;
+    margin-bottom: 24px;
+    border: ;
+    border-radius: 50px;
+    fill:  #E7E9FC;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.10);
+    
+
+
+
+}
+
+.close-btn-icon{
+stroke: #2E2F42;
+}
+
+.textarea{
+    margin-bottom: 16px;
 }
