--- a/css/styles.css
+++ b/css/styles.css
@@ -945,7 +945,7 @@ stroke: #2E2F42;
     margin-bottom: 16px;
 }
 
-.user-subscription{
+.subscribe-text{
     color:#FFF;
         font-family: Roboto;
         font-size: 16px;
