--- a/css/styles.css
+++ b/css/styles.css
@@ -971,7 +971,9 @@ line-height: 2;
 letter-spacing: 0.04em;
 padding-top: 8px;
 padding-left: 16px;
-
+border: 1px solid #ffffff;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
 
 .subscribe-btn{
@@ -983,8 +985,26 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 border-radius: 4px;
 background:  #4D5AE5;
+min-width: 165px;
+height: 40px;
+display: flex;
+justify-content: center;
+align-items: center;
+cursor: pointer;
+border: none;
+border-radius: 4px;
 }
 
 .levels{
     position: relative;
+}
+
+.contact-email{
+    display: flex;
+    gap: 24px;
+
+}
+
+.send-icon{
+    margin-left: 16px;
 }
