--- a/css/styles.css
+++ b/css/styles.css
@@ -974,6 +974,7 @@ padding-left: 16px;
 border: 1px solid #ffffff;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+background-color: transparent;
 }
 
 .subscribe-btn{
