--- a/css/styles.css
+++ b/css/styles.css
@@ -810,10 +810,12 @@ margin-bottom: 16px;
     display: flex;
     justify-content: center;
     margin-top: 80px;
-    background-color: #2E2F42, rgba(46, 47, 66, 0.40);;
+    background-color: rgba(46, 47, 66, 0.40);;
     /* opacity: 0;
     visibility: hidden;
     pointer-events: none;   */
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  
 }
 
@@ -866,12 +868,20 @@ margin-bottom: 16px;
 }
 
 .backdrop-box{
-    position: relative;
+    position: absolute;
     padding-left: 24px;
     padding-right: 24px;
     width: 408px;
     height: 584px;
     background-color: #FCFCFC;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     
 }
@@ -927,18 +937,29 @@ margin-bottom: 16px;
     margin-top: 32px;
     margin-right: 32px;
     margin-bottom: 24px;
-   border-radius: 50px;
     fill:  #E7E9FC;
     stroke-width: 1px;
     stroke: rgba(0, 0, 0, 0.10);
-    
-
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
 
 .close-btn-icon{
 stroke: #2E2F42;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .textarea{
