--- a/css/styles.css
+++ b/css/styles.css
@@ -816,7 +816,7 @@ margin-bottom: 16px;
     pointer-events: none;   */
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
+    padding: 72px 24px 24px 24px;
 }
 
 .user-name-wrapper{
@@ -833,6 +833,10 @@ margin-bottom: 16px;
 .backdrop-icons{
   stroke: #2E2F42; 
   position: absolute; 
+  left: 16px;
+ top: 50%;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment{
@@ -865,6 +869,14 @@ margin-bottom: 16px;
 
 .user-info{
     width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-color: #4D5AE5;
 }
 
 .backdrop-box{
@@ -928,6 +940,7 @@ margin-bottom: 16px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     margin-bottom: 4px;
+    display: block;
 }
 
 .close-btn{
@@ -1019,6 +1032,7 @@ border-radius: 4px;
 
 .levels{
     position: relative;
+    margin-bottom: 8px;
 }
 
 .contact-email{
@@ -1029,4 +1043,8 @@ border-radius: 4px;
 
 .send-icon{
     margin-left: 16px;
+}
+
+.box{
+    position: relative;
 }
