--- a/css/styles.css
+++ b/css/styles.css
@@ -819,6 +819,23 @@ margin-bottom: 16px;
     padding: 72px 24px 24px 24px;
 }
 
+
+.modal-window{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
+    background-color: #FCFCFC;
+    transform: translate(-50%, -50%) scale(1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
 .user-name-wrapper{
     width: 360px;
     height: 58px;
@@ -883,17 +900,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     padding-left: 24px;
     padding-right: 24px;
-    width: 408px;
-    height: 584px;
-    background-color: #FCFCFC;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
     
     
 }
