--- a/css/styles.css
+++ b/css/styles.css
@@ -957,7 +957,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-top: 32px;
     margin-right: 32px;
     margin-bottom: 24px;
-    fill:  #E7E9FC;
     stroke-width: 1px;
     stroke: rgba(0, 0, 0, 0.10);
     top: 24px;
@@ -971,6 +970,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
+    background-color: #e7e9fc;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
