--- a/css/styles.css
+++ b/css/styles.css
@@ -834,6 +834,7 @@ margin-bottom: 16px;
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
 
 }
 .user-name-wrapper{
@@ -974,6 +975,11 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    fill: #ffffff;
 
 }
 
