--- a/css/styles.css
+++ b/css/styles.css
@@ -942,7 +942,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .user-name-wrapper{
-    color:LIGHT-SLATE, #8E8F99;
+    color:#8E8F99;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
