--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,8 @@ img{
 
 }
 
-.visually-hidden {
+.visually-hidden ,
+.checkbox-text{
     position: absolute;
     width: 1px;
     height: 1px;
@@ -864,13 +865,21 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 400;
     line-height:1.17;
     letter-spacing: 0.04em;
-    width: 360px;
+    width: 100%;
     height: 120px;
     padding-top: 8px;
     padding-left: 16px;
     border-radius: 4px;
     border: 1px solid #2E2F4266, rgba(46, 47, 66, 0.40);
+    background-color: transparent;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.comment:focus{
+border-color: #4D5AE5;
+} 
 
 .backdrop-text{
     color:  #2E2F42;
@@ -924,6 +933,16 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         line-height: 1.33;
         letter-spacing: 0.04em;
         text-decoration-line: underline;
+        width: 16px;
+        height: 16px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 2px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+         border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: inline-flex;
+        justify-content: center;
+        fill: transparent;
 }
 
 .backdrop-btn{
@@ -1060,4 +1079,16 @@ border-radius: 4px;
 
 .box{
     position: relative;
+}
+
+.checkbox{
+    margin-bottom: 24px;
+
+}
+
+.privacy-policy-link{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color:#8e8f99;
 }
