--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ img{
 
 }
 
-.visually-hidden ,
+.visually-hidden,
 .checkbox-text{
     position: absolute;
     width: 1px;
@@ -867,10 +867,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.04em;
     width: 100%;
     height: 120px;
-    padding-top: 8px;
-    padding-left: 16px;
+    padding: 8px 16px;
     border-radius: 4px;
-    border: 1px solid #2E2F4266, rgba(46, 47, 66, 0.40);
+    border: 1px solid rgba(46, 47, 66, 0.40);
     background-color: transparent;
     outline: transparent;
     resize: none;
@@ -904,6 +903,12 @@ border-color: #4D5AE5;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-color: #4D5AE5;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.user-info:focus{
+    fill: #4D5AE5;
+
 }
 
 .backdrop-box{
@@ -928,21 +933,22 @@ border-color: #4D5AE5;
 
 .other-style-text{
     color:  #4D5AE5;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 1.33;
-        letter-spacing: 0.04em;
-        text-decoration-line: underline;
-        width: 16px;
-        height: 16px;
-        border: 1px solid rgba(46, 47, 66, 0.4);
-        border-radius: 2px;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-         border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        display: inline-flex;
-        justify-content: center;
-        fill: transparent;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    justify-content: center;
+    fill: transparent;
+    align-items: center;
 }
 
 .backdrop-btn{
@@ -958,6 +964,13 @@ border-color: #4D5AE5;
         letter-spacing: 0.04em;
         margin-bottom: 24px;
         width: 105px;
+}
+
+.backdrop-btn:hover,
+.backdrop-btn:focus {
+    background-color: #404bbf;
+    border: none;
+
 }
 
 .user-name-wrapper{
@@ -999,7 +1012,6 @@ border-color: #4D5AE5;
 .close-btn:hover,
 .close-btn:focus {
     fill: #ffffff;
-
 }
 
 .close-btn-icon{
