--- a/css/styles.css
+++ b/css/styles.css
@@ -1003,12 +1003,19 @@ border-color: #4D5AE5;
 
 .close-btn:hover,
 .close-btn:focus {
-    fill: #ffffff;
+background-color: #404bbf;
+border: none;
+
 }
 
 .close-btn-icon{
 stroke: #2E2F42;
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn-icon:hover,
+.close-btn-icon:focus{
+fill: #FFFFFF;
 }
 
 .textarea{
