--- a/css/styles.css
+++ b/css/styles.css
@@ -903,7 +903,7 @@ border-color: #4D5AE5;
     border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
-.user-info:focus{
+.user-info:focus + .backdrop-icons{
     fill: #4D5AE5;
 
 }
@@ -1005,6 +1005,7 @@ border-color: #4D5AE5;
 .close-btn:focus {
 background-color: #404bbf;
 border: none;
+fill: #ffffff
 
 }
 
