--- a/css/styles.css
+++ b/css/styles.css
@@ -893,18 +893,17 @@ border-color: #4D5AE5;
 .user-info{
     width: 100%;
     height: 40px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     background-color: transparent;
     padding-left: 38px;
-    outline: transparent;
+    outline: 0px solid transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border-color: #4D5AE5;
     border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
-.user-info:focus + .backdrop-icons{
-    fill: #4D5AE5;
+.user-info:focus + .backdrop-icons {
+   
+    border-color: #4D5AE5;
 
 }
 
