--- a/css/styles.css
+++ b/css/styles.css
@@ -896,14 +896,14 @@ border-color: #4D5AE5;
     border-radius: 4px;
     background-color: transparent;
     padding-left: 38px;
-    outline: 0px solid transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid rgba(46, 47, 66, 0.4);
+    outline: 0px solid transparent;
 }
 
-.user-info:focus + .backdrop-icons {
-   
-    border-color: #4D5AE5;
+ .user-info:focus + .backdrop-icons {
+   border-color: #4D5AE5; 
+   fill: #4D5AE5;
 
 }
 
