--- a/css/styles.css
+++ b/css/styles.css
@@ -910,9 +910,6 @@ border-color: #4D5AE5;
 .backdrop-box{
     position: absolute;
     
-   
-    
-    
 }
 
 .checkbox-text{
@@ -933,17 +930,27 @@ border-color: #4D5AE5;
     line-height: 1.33;
     letter-spacing: 0.04em;
     text-decoration-line: underline;
-    width: 16px;
-    height: 16px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-    justify-content: center;
-    fill: transparent;
-    align-items: center;
+   
+    
+   
+}
+
+.checkbox-agree{
+width: 16px;
+height: 16px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display: inline-flex;
+align-items: center;
+justify-content: center;
+fill: transparent;
+}
+
+.checkbox-text:checked + .checkbox > .checkbox-agree{
+    fill:#F4F4FD;
 }
 
 .backdrop-btn{
