--- a/css/styles.css
+++ b/css/styles.css
@@ -952,21 +952,29 @@ border-radius: 2px;
 
 .checkbox-text:checked + .checkbox > .checkbox-agree{
     fill:#F4F4FD;
+    background-color:#404bbf;
+    border: none;
 }
 
 .backdrop-btn{
     border-radius: 4px;
-     background:#4D5AE5;
-     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background:#4D5AE5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     padding: 16px 32px;
     color: #FFF;
-        text-align: center;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        margin-bottom: 24px;
-        width: 105px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    margin-bottom: 24px;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+    display: block;
+    border: none;
 }
 
 .backdrop-btn:hover,
