--- a/css/styles.css
+++ b/css/styles.css
@@ -912,13 +912,22 @@ border-color: #4D5AE5;
     
 }
 
+.checkbox {
+    margin-bottom: 24px;
+    display: flex;
+    width: 100%;
+    margin: auto;
+    position: relative;
+
+}
+
 .checkbox-text{
  color: #8E8F99;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    width: 338px;
+   
     
    
 }
@@ -1108,15 +1117,12 @@ border-radius: 4px;
     position: relative;
 }
 
-.checkbox{
-    margin-bottom: 24px;
 
-}
 
 .privacy-policy-link{
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color:#8e8f99;
-    
+
 }
