--- a/css/styles.css
+++ b/css/styles.css
@@ -257,8 +257,6 @@ align-items: center;
 /* display: inline-block; */
 
 
-
-
 .main-text {
     color: #FFF;
     text-align: center;
@@ -272,12 +270,8 @@ align-items: center;
     margin-bottom: 48px;
     margin-left: auto;
     margin-right: auto;
-    
-  
+
 }
-
-
-   
 
 .main-button {
 
@@ -298,7 +292,6 @@ align-items: center;
     margin-right: auto;
     margin-left: auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 
 }
 
@@ -307,17 +300,11 @@ align-items: center;
 .main-button:focus{
   
     background: #404BBF;
-    
-    
-   
-}
-        
+}  
 
  button {
       cursor: pointer;
   }
-
-
 
   .advantages{
     padding-top: 120px;
@@ -327,8 +314,6 @@ align-items: center;
  .menu-advantages-icon {
     fill: #2E2F42;
  }
-
-  
 
 .menu-advantages-icons {
      display: flex;
@@ -348,13 +333,8 @@ align-items: center;
     }
      
    
-   
-
-
   .icons-list{
     fill:#f4f4fd;
- 
-
   }
 
   .advantages-container{
@@ -362,8 +342,7 @@ align-items: center;
     padding: 0 15px 0 15px;
     width: 1158px; 
     align-items: center;
-   
-       
+  
   }
 
  .top-advantages{
@@ -373,10 +352,8 @@ align-items: center;
    /* margin-left: 156px;
     margin-right: 156px;
     margin-bottom: 120px; */
-   
 
  }
-
 
 
 .menu-advantages-item {
@@ -503,7 +480,6 @@ height: 40px;
     justify-content: center;
     transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-
 }
 
 .prof-container{
@@ -528,9 +504,6 @@ height: 40px;
 .team-cards{
     display:flex ;
     gap: 24px;
-   
-   
-  
     
 }
 
@@ -566,7 +539,6 @@ height: 40px;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-   
 
 } 
 
@@ -587,8 +559,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 2px 1px rgba(46, 47, 66, 0.08);
         transform: translateY(0%);
 }
-
-
 
 
 .overlay-text{
@@ -622,8 +592,7 @@ justify-content: center;
     margin-bottom: 32px;
     padding-left: 16px;
     padding-right: 16px;
-    
- 
+     
 }
 
 .category{
@@ -635,7 +604,6 @@ justify-content: center;
     display: block;
     top: 0;
     left: 0;
-   
     
 }
 
@@ -657,8 +625,6 @@ justify-content: center;
     justify-content: center;
     flex-shrink: 0;
 }
-
-
 
 
 .menu-contact-link:hover,
@@ -797,6 +763,16 @@ margin-bottom: 16px;
     margin-right: 120px;
 }
 
+.footer-form{
+    margin-left:80px;
+}
+
+.send-icon{
+    fill: #FFFFFF;
+}
+
+/* backdrop */
+
 .backdrop.is-open{
     position: fixed;
     top: 0;
@@ -810,9 +786,9 @@ margin-bottom: 16px;
     display: flex;
     justify-content: center;
     background-color: rgba(46, 47, 66, 0.40);;
-    /* opacity: 0;
+    opacity: 0;
     visibility: hidden;
-    pointer-events: none;   */
+    pointer-events: none;   
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
@@ -940,9 +916,6 @@ border-color: #4D5AE5;
     letter-spacing: 0.04em;
     text-decoration-line: underline;
    
-   
-    
-   
 }
 
 .checkbox-agree{
@@ -957,6 +930,9 @@ align-items: center;
 justify-content: center;
 fill: transparent;
 border-radius: 2px;
+display: flex;
+align-content: start;
+
 }
 
 .checkbox-text:checked + .checkbox > .checkbox-agree{
@@ -984,6 +960,8 @@ border-radius: 2px;
     cursor: pointer;
     display: block;
     border: none;
+    margin: auto;
+    margin-top: 24px;
 }
 
 .backdrop-btn:hover,
@@ -1124,5 +1102,6 @@ border-radius: 4px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color:#8e8f99;
+    display: flex;
 
 }
