--- a/css/styles.css
+++ b/css/styles.css
@@ -786,9 +786,9 @@ margin-bottom: 16px;
     display: flex;
     justify-content: center;
     background-color: rgba(46, 47, 66, 0.40);;
-    opacity: 0;
+    /* opacity: 0;
     visibility: hidden;
-    pointer-events: none;   
+    pointer-events: none;    */
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
