--- a/css/styles.css
+++ b/css/styles.css
@@ -781,18 +781,19 @@ margin-bottom: 16px;
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    /* top: 50%;
-    left: 50%; */
     display: flex;
     justify-content: center;
     background-color: rgba(46, 47, 66, 0.40);;
-    /* opacity: 0;
-    visibility: hidden;
-    pointer-events: none;    */
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
 }
+
+/* .backdrop.is-open{
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+} */
 
 
 .modal-window{
@@ -874,11 +875,11 @@ border-color: #4D5AE5;
     padding-left: 38px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid rgba(46, 47, 66, 0.4);
-    outline: 0px solid transparent;
+    outline: transparent;
 }
 
  .user-info:focus + .backdrop-icons {
-   border-color: #4D5AE5; 
+   border-color:#4D5AE5; 
    fill: #4D5AE5;
 
 }
@@ -1024,6 +1025,25 @@ fill: #FFFFFF;
 .textarea{
     margin-bottom: 16px;
 }
+.levels {
+    position: relative;
+    margin-bottom: 8px;
+}
+
+.box {
+    position: relative;
+}
+
+.privacy-policy-link {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: flex;
+
+}
+
+/* footer */
 
 .subscribe-text{
     color:#FFF;
@@ -1076,10 +1096,7 @@ border: none;
 border-radius: 4px;
 }
 
-.levels{
-    position: relative;
-    margin-bottom: 8px;
-}
+
 
 .contact-email{
     display: flex;
@@ -1091,17 +1108,3 @@ border-radius: 4px;
     margin-left: 16px;
 }
 
-.box{
-    position: relative;
-}
-
-
-
-.privacy-policy-link{
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color:#8e8f99;
-    display: flex;
-
-}
