--- a/css/styles.css
+++ b/css/styles.css
@@ -921,6 +921,7 @@ letter-spacing: 0.04em;
     line-height: 1.33;
     letter-spacing: 0.04em;
     text-decoration-line: underline;
+    margin-left: 4px;
    
 }
 
